Fix list height scrollbar issue

--- a/frontend/src/components/UI/Map/ListPanel.module.scss
+++ b/frontend/src/components/UI/Map/ListPanel.module.scss
@@ -36,6 +36,7 @@
   position: relative;
   top: -50px;
   margin-bottom: -50px;
+  height: 100%;
 
   & > div {
     &::-webkit-scrollbar {
